# agentic-researcher

./: .gitignore  README.md  spec.md  start.bat  start.sh  stop.sh
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: config.py  database.py  main.py  models.py  schemas.py
backend/src/agents/: analysis_agent.py  insight_agent.py  search_agent.py
backend/src/routers/: research.py
backend/src/workflow/: graph.py  state.py
backend/tests/: test_analysis_agent.py  test_api.py  test_config.py  test_insight_agent.py  test_integration.py  test_models.py  test_search_agent.py  test_workflow.py
docs/plans/: 2025-11-19-market-research-platform-design.md  2025-11-19-market-research-platform-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: research.ts
frontend/src/components/: ClusterMap.tsx  TrendTimeline.tsx
